--- a/templates/HFC/screening_email.html
+++ b/templates/HFC/screening_email.html
@@ -11,7 +11,7 @@
             <div>
                 <p> Dear {{name}}, </p>
                 <p>You have been invited  by Hack For Change to attend the screening test.Please click on the below link to take the test.</p>
-                {% if debug %}
+                {% if debug_flag %}
                 http://staging.hackforchange.co.in/screenings/{{screeninguuid}} <br>
                 {% else %}
                 https://www.hackforchange.co.in/screenings/{{screeninguuid}}
